--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <p>Rector U.A.B</p>
           </div>
           <div class="w-1/2 sm:w-auto flex flex-col items-center">
-            <img src="./assets/ANDERSON.JPG" alt=" " class="size-15 rounded-full object-cover mb-2">
+            <img src="./assets/and.jpg" alt=" " class="size-15 rounded-full object-cover mb-2">
             <p>Decano U.A.B</p>
           </div>
           <div class="w-1/2 sm:w-auto flex flex-col items-center">
